# Raytracer

./: .gitignore  CMakeLists.txt  Makefile  build.sh  readme.md
.github/workflows/: compile.yml
docs/doxygen/: Doxyfile  mainpage.md
includes/models/: Point3D.hpp  Vector3D.hpp
includes/objects/: AObject3D.hpp
includes/objects/shapes/: Sphere.hpp
scenes/: example1.cfg  example1_cube.cfg
src/: Main.cpp
src/core/: Core.cpp  Core.hpp
src/display/: DIsplay.cpp  DIsplay.hpp  SfmlDisplay.cpp  SfmlDisplay.hpp
src/dll_loader/: DLLLoader.cpp  DLLLoader.hpp
src/factories/material_factory/: MaterialFactory.cpp  MaterialFactory.hpp
src/factories/object_factory/: ObjectFactory.cpp  ObjectFactory.hpp
src/graphics/camera/: Camera.cpp  Camera.hpp
src/graphics/color/: Color.cpp  Color.hpp
src/graphics/image/: Image.hpp
src/graphics/materials/: AMaterial.hpp  IMaterial.hpp
src/graphics/materials/glass/: Glass.cpp  Glass.hpp
src/graphics/materials/lambertian/: Lambertian.cpp  Lambertian.hpp
src/graphics/materials/light/: Light.cpp  Light.hpp
src/graphics/materials/mirror/: Mirror.cpp  Mirror.hpp
src/graphics/ray/: Ray3D.cpp  Ray3D.hpp
src/graphics/scene/: Scene.cpp  Scene.hpp  Scene.tpp
src/graphics/textures/: ITexture.hpp
src/graphics/textures/flatcolor/: FlatColor.cpp  FlatColor.hpp
src/imageGenerator/: ImageGenerator.cpp  ImageGenerator.hpp
src/math/: Vector3D.cpp
src/math/matrix3d/: Matrix3D.hpp
src/math/point3d/: Point3D.hpp
src/math/vector3d/: Vector3D.cpp  Vector3D.hpp
src/models/: HitData.hpp  RenderMode.hpp  TexCoords.hpp  Vector3D.cpp
src/objects/: IObject3D.hpp
src/objects/objectlist/: ObjectList.cpp  ObjectList.hpp
src/objects/shapes/Cone/: Cone.cpp  Cone.hpp
src/objects/shapes/Cube/: Cube.cpp  Cube.hpp
src/objects/shapes/Cylinder/: Cylinder.cpp  Cylinder.hpp
src/objects/shapes/plane/: Plane.cpp  Plane.hpp
src/objects/shapes/sphere/: Sphere.cpp  Sphere.hpp
src/parsing/: Parsing.cpp  Parsing.hpp  ParsingModels.hpp
src/ray/: Ray3D.hpp
src/thread/: Multi_Thread.cpp  Multi_Thread.hpp
src/utils/: Randomizer.hpp  Range.hpp
src/utils/randomizer/: Randomizer.hpp
src/utils/range/: Range.hpp
